Overflow fix
Noticed some overflow on my phone when viewing the page, fixed.

--- a/public/index.css
+++ b/public/index.css
@@ -9,7 +9,6 @@ body {
   margin: 0;
   height: 100vh;
   box-sizing: border-box;
-  overflow: hidden;
   background: black;
 }
 
